# smart-car-lock

./: .gitignore  README.md  app.py  main.py  pyproject.toml
models/: secure.py
routes/: auth.py  health.py
src/diagrams/sketch/: database.drawio  program-diagram.drawio
utils/: logger.py  secure.py
